Fix x-axis overflow on mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -55,6 +55,8 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+body, html { overflow-x:hidden; }
+
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
